--- a/index2.html
+++ b/index2.html
@@ -88,7 +88,7 @@
 <body>
 
 <div class="wrapper">
-  <div class="content">女神，女生节快乐</div>
+  <div class="content">小组长，女生节快乐</div>
 </div>
 
 <script type="text/javascript">
